[package]
name = "unshred"
version = "0.1.0"
edition = "2021"


[features]
default = []
metrics = ["prometheus"]

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
bincode = "=1.3.3" # Solana compatibility
crossbeam = "0.8.4"
dashmap = "6.1.0"
libc = "0.2.178"
moka = { version = "0.12.12", features = ["sync"] }
num_cpus = "1.17.0"
prometheus = { version = "0.14.0", optional = true }
serde = "1.0.219"
socket2 = "0.6.1"
solana-entry = "3.0.12"
solana-ledger = { version = "3.0.12", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
#tokio = "1.45.1"
tracing = "0.1.41"
