[package]
name = "unshred"
version = "0.1.0"
edition = "2021"


[features]
default = []
metrics = ["prometheus"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-bytes-max = ["hotpath/hotpath-alloc-bytes-max"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-alloc-count-max = ["hotpath/hotpath-alloc-count-max"]
xdp = []

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
#bincode = "=1.3.3" # Solana compatibility
bytes = "1.10.1"
dashmap = "6.1.0"
libc = "0.2.174"
num_cpus = "1.17.0"
prometheus = { version = "0.14.0", optional = true }
serde = "1.0.219"
socket2 = "0.5.10"
solana-entry = "3.0.12"
solana-ledger = { version = "3.0.12", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
solana-hash = "3.0.0"
solana-address = { version = "1.0.0", features = ["atomic", "borsh", "bytemuck", "curve25519", "decode", "dev-context-only-utils", "error", "rand", "sanitize", "serde", "sha2", "std", "syscalls"] }
tokio = "1.45.1"
tracing = "0.1.41"
wincode = { version = "0.2.5", features = ["solana-short-vec", "derive"] }
hotpath = { version = "0.2.5"}
crossbeam = "0.8.4"
arrayvec = "0.7.6"
arrayref = "0.3.9"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { git = "https://github.com/aya-rs/aya.git" }
